--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <li>Employee of the year Award (2023)</li>
 </ol><hr>
 <h1> Others</h1>
-<a href="hobbis.html">Hobbis</a><br>
+<a href="hobbies.html">Hobbis</a><br>
 <a href="contact.html">Contact</a>
 <br>
 <footer>
@@ -55,4 +55,5 @@
 </footer>
 
 </body>
+
 </html>
